--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <li> Vagrant </li>
          <li> Docker </li>
          <li> Ansible </li>
-         <li> Integracióon continua </li>
+         <li> Integración continua: Madurez y productividad en el desarollo de software </li>
      </ul>
 </body>
 </html>
