--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> Cursos de Alura </title>
+     <title> Lista de cursos de devOps de  Alura </title>
 </head>
 <body>
      <ul>
          <li> Vagrant </li>
-         <li> Docker:creando containers sin dolor de cabeza </li>
+         <li> Docker curso :creando containers sin dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integración continua: Madurez y productividad en el desarollo de software </li>
          <li>kubernetes</li>
