--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <li> Docker curso :creando containers sin dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integración continua: Madurez y productividad en el desarollo de software </li>
-         <li>kubernetes</li>
+         <li>kubernetes: instrunciones a la orquestacion de containers</li>
      </ul>
 </body>
 </html>
