cambiado el nombre del curso vagrant

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant </li>
+         <li> Vagrant: gerenciando maquinas virtulales </li>
          <li> Docker curso :creando containers sin dolor de cabeza </li>
          <li> Ansible: su infraestructura como codigo</li>
          <li> Integración continua: Madurez y productividad en el desarollo de software </li>
